<resources>
    <string name="app_name">mCARD</string>
    <string name="action_settings">Settings</string>
    <string name="greeting_menu">Xin chào!</string>
    <string name="greeting_menu_2">Bạn vui lòng đăng ký /đăng nhập để sử dụng ứng dụng</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Số điện thoại</string>
    <string name="prompt_password">mPass (mật mã giao dịch)</string>
    <string name="action_sign_in">Đăng nhập</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcometo">Welcome to Sacombank</string>
    <string name="produce">Đăng nhập để sử dụng các tính năng của ứng dụng</string>
    <string name="home">Trang chủ</string>
    <string name="introduce">Liên hệ</string>
    <string name="account">Tài khoản người dùng</string>
    <string name="account_register">Đăng nhập/Đăng ký</string>
    <string name="account_update_pass">Cập nhật mật khẩu</string>
    <string name="account_user">Thông tin người dùng</string>
    <string name="account_card_manager">Quản lý thẻ</string>
    <string name="payment">Thanh toán</string>
    <string name="payment_qr">Thanh toán QR</string>
    <string name="payment_bill">Thanh toán hóa đơn</string>
    <string name="payment_credit">Thanh toán thẻ tín dụng</string>
    <string name="payment_card">Nạp tiền điện thoại</string>
    <string name="online">Chuyển khoản trực tuyến</string>
    <string name="policy">Điều khoản và điều kiện</string>
    <string name="history">Lịch sử giao dịch</string>
    <string name="history_qr">Thanh toán QR</string>
    <string name="history_pos">Thanh toán bằng Mobile POS</string>
    <string name="history_bill">Thanh toán hóa đơn</string>
    <string name="history_credit">Thanh toán thẻ tín dụng</string>
    <string name="history_phone_card">Nạp tiền điện thoại</string>
    <string name="language">Ngôn ngữ</string>
    <string name="newest">Mới nhất</string>
    <string name="food">Ẩm thực</string>
    <string name="travel">Du lịch</string>
    <string name="shopping">Mua sắm</string>
    <string name="relax">Giải trí</string>
    <string name="sport">Thể thao</string>
    <string name="art">Nghệ thuật</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="introduceDeatail"> Nội dung cần giới thiệu</string>
    <string name="introduceTitle">Giới thiệu</string>
    <string name="login_title">Đăng nhập</string>
    <string name="register">Đăng ký</string>
    <string name="forgot_pass_title">Quên mật khẩu</string>
    <string name="register_message">Đăng ký thông tin tài khoản ứng dụng</string>
    <string name="prompt_card_no">Số tài khoản/số thẻ</string>
    <string name="prompt_cvv">Số CVV</string>
    <string name="policy_mesage1">Tôi đã đọc và đồng ý với các </string>
    <string name="policy_mesage2">điều khoản và điều kiện  </string>
    <string name="policy_mesage3"> sử dụng ứng dụng của Sacombank</string>
    <string name="action_no">Không</string>
    <string name="action_yes">Có</string>
    <string name="forgot_pass_message">Bạn sẽ phải đăng ký lại tài khoản ứng dụng nếu quên mật khẩu. Các lịch sử hoạt động trên tài khoản cũ sẽ bị mất đi. Bạn có muốn tiếp tục?</string>
    <string name="mesage_introduce">(Sacombank tiến hành khai trương đồng loạt 11 Phòng giao dịch trên cơ sở nâng cấp từ các Quỹ tiết kiệm theo Công văn số 1990/NHNN-TTGSNH ngày 24/3/2017 của Ngân hàng Nhà nước Việt Nam. Không chỉ thực hiện các nghiệp vụ: huy động tiền gửi, phát hành và chiết khấu giấy tờ có giá, chi trả kiều hối, chuyển tiền trong nước… trong khuôn khổ của Quỹ tiết kiệm, các Phòng giao dịch khai trương sẽ được thực hiện đầy đủ các nghiệp vụ trong khuôn khổ được phép hoạt động của Phòng giao dịch NHTM bao gồm: nhận tiền gửi bằng VND, USD; tài trợ vốn vay cho khách hàng doanh nghiệp và cá nhân nhằm phục vụ nhu cầu kinh doanh và tiêu dùng, chuyển tiền nhanh thông qua các điểm giao dịch rộng khắp tại 48/63 tỉnh thành Việt Nam và 2 nước Lào, Campuchia; thực hiện các dịch vụ: thẻ, ngân hàng điện tử, bảo lãnh , bao thanh toán, thu chi trả lương hộ, kinh doanh và thu đổi ngoại tệ, chi trả kiều hối, các dịch vụ tư vấn tài chính và các hoạt động khác.</string>
    <string name="tab_1_title">Lịch sử</string>
    <string name="tab_2_title">Quét mã QR</string>
    <string name="tab_3_title">Thanh toán</string>
    <string name="tab_4_title">Chuyển khoản</string>
    <string name="txtContentCard">Vui lòng nhập mã PIN để xác nhận</string>
    <string name="btn_OK_DialogCard">Hoàn tất</string>
    <string name="hintEnterPinCard">Nhập mã PIN</string>
    <string name="txtContentQRCode">Vui lòng nhập mPass:</string>
    <string name="edEnterPassword">Nhập mã giao dịch (mPass)</string>
    <string name="btn_OK_DialogEnterPassword">Hoàn tất</string>
    <string name="btn_OK_DialogQRCode">Hoàn tất</string>
    <string name="txtContentLoginOnDiviceAnother">Bạn đang yêu cầu đăng nhập trên một thiết bị khác.  Vui lòng nhập mã PIN của thẻ đã được đăng ký trên tài khoản ứng dụng để hoàn tất đăng nhập</string>
    <string name="edEnterPinLoginOnDiviceAnother">Nhập mã PIN</string>
    <string name="btn_OK_DialogLoginOnDiviceAnother">Hoàn tất</string>
    <string name="thanks">Cảm ơn !</string>
    <string name="thanks_message">Cảm ơn bạn đã tin tưởng sử dụng dịch vụ thẻ của Sacombank</string>
    <string name="action_finish">Hoàn tất</string>
    <string name="signin_warning">Bạn không nhận được mã xác thực?</string>
    <string name="send_again">Gửi lại</string>
    <string name="signin_confirm_message">Một tin nhắn chứa mã xác thực đã gửi đến số điện thoại %1$s</string>
    <string name="prompt_confirm_code">Nhập mã xác thực</string>
    <string name="register_password_message">Thiết lập mPass (mật mã giao dịch),    (bao gồm 6 số)</string>
    <string name="prompt_signup_pass1">mPass</string>
    <string name="prompt_signup_pass2">Nhập lại mPass</string>
    <string name="close_dialog">OK</string>
    <string name="notify_register_success">Đăng ký tài khoản thành công!</string>
    <string name="title_article_detail">Ưu đãi từ đối tác</string>
    <string name="tab_title_card_info">Thông tin chung</string>
    <string name="tab_title_card_copy">Sao kê</string>
    <string name="tab_title_card_balance">Số dư</string>
    <string name="text_account_password_title">Vui lòng cập nhật đầy đủ thông tin bên dưới</string>
    <string name="title_password_old">Nhập mPass cũ (6 chữ số)</string>
    <string name="title_password_new1">Nhập mPass mới (6 chữ số)</string>
    <string name="title_password_new2">Nhập lại mPass mới (6 chữ số)</string>
    <string name="hint_password_new2">XXXXXX</string>
    <string name="hint_password_new1">XXXXXX</string>
    <string name="hint_password_old">XXXXXX</string>
    <string name="action_confirm">Xác nhận</string>
    <string name="title_update_pass">Cập nhật mật khẩu</string>
    <string name="verification">Xác nhận</string>
    <string name="pinverification1">Bạn vui lòng nhập mã PIN để xác thực giao dịch:</string>
    <string name="pinverification2">Xác thực giao dịch</string>
    <string name="pinverification3">Mã PIN:</string>
    <string name="pinselecttion1">Thiết lập mã PIN</string>
    <string name="pinselection2">Vui lòng kiểm tra lại thông tin thanh toán</string>
    <string name="pinselecttion3">Số thẻ:</string>
    <string name="pinselecttion4">Số CVV:</string>
    <string name="pinselection5">Mã PIN mới:</string>
    <string name="pinselecttion6">Nhập lại mã PIN mới:</string>
    <string name="dialogTitle">Thiết lập mã PIN thành công!</string>
    <string name="thongTinChiTietDonHang">CHI TIẾT ĐƠN HÀNG</string>
    <string name="qrTitle">Quản lý tấc cả chức năng thanh toán bằng ứng dụng</string>
    <string name="qrXacNhan">Thanh toán QR</string>
    <string name="qrScanner">Quét mã QR \n Hướng camera vào mã QR để thanh toán</string>
    <string name="title_activity_search">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="action_sign_up">Đăng ký</string>
    <string name="txtTuDongKhoaThe">*Tự động khóa thẻ sau khi giao dịch thành công</string>
    <string name="account_logout">Đăng xuất</string>
    <string name="confirm_logout">Bạn muốn đăng xuất tài khoản này?</string>
    <string name="btnTiepTucQRCode1">Tiếp tục</string>
    <string name="like_counter">(%1$d)</string>
    <string name="due_date_promotion">Chỉ còn %1$s ngày</string>
</resources>