<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <com.sacombank.consumers.views.widgets.TextViewPlus
            android:id="@+id/tvPassOldTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="5dp"
            android:text="@string/title_password_old"
            android:textColor="@color/text_color_language"
            android:textSize="15sp"
            app:font="@string/ROBOTO_LIGHT" />


        <com.sacombank.consumers.views.widgets.EditTextViewPlus
            android:id="@+id/edtPasswordOld"
            style="@style/style_password_edit"
            android:layout_above="@+id/line1"
            android:layout_alignParentRight="true"
            android:hint="@string/hint_password_old"
            android:imeOptions="actionNext"
            android:textColorHint="@color/text_color_account_password_title"
            android:textCursorDrawable="@drawable/color_cursor"
            app:editfont="@string/ROBOTO_LIGHT" />

        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/tvPassOldTitle"
            android:layout_marginTop="5dp"
            android:background="@drawable/line" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <com.sacombank.consumers.views.widgets.TextViewPlus
            android:id="@+id/tvPassNew1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="5dp"
            android:text="@string/title_password_new1"
            app:font="@string/ROBOTO_LIGHT"
            android:textColor="@color/text_color_language"
            android:textSize="15sp" />


        <com.sacombank.consumers.views.widgets.EditTextViewPlus
            android:id="@+id/edtPasswordNew1"
            style="@style/style_password_edit"
            android:layout_above="@+id/line2"
            android:imeOptions="actionNext"
            android:textCursorDrawable="@drawable/color_cursor"
            app:editfont="@string/ROBOTO_LIGHT"
            android:textColorHint="@color/text_color_account_password_title"
            android:layout_alignParentRight="true"
            android:hint="@string/hint_password_new1" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_below="@+id/tvPassNew1"
            android:layout_marginTop="5dp"
            android:background="@drawable/line" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp">

        <com.sacombank.consumers.views.widgets.TextViewPlus
            android:id="@+id/tvPassNew2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginRight="5dp"
            app:font="@string/ROBOTO_LIGHT"
            android:text="@string/title_password_new2"
            android:textColor="@color/text_color_language"
            android:textSize="15sp" />


        <com.sacombank.consumers.views.widgets.EditTextViewPlus
            android:id="@+id/edtPasswordNew2"
            style="@style/style_password_edit"
            android:layout_above="@+id/line3"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textColorHint="@color/text_color_account_password_title"
            android:imeOptions="actionDone"
            app:editfont="@string/ROBOTO_LIGHT"
            android:layout_alignParentRight="true"
            android:hint="@string/hint_password_new2"
            android:layout_alignParentTop="true" />

        <View
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height=".5dp"
            android:layout_below="@+id/tvPassNew2"
            android:textCursorDrawable="@drawable/color_cursor"
            android:layout_marginTop="5dp"
            android:background="@drawable/line" />
    </RelativeLayout>

    <com.sacombank.consumers.views.widgets.ButtonPlus
        app:buttonfont="@string/ROBOTO_LIGHT"
        android:id="@+id/btnXacNhanUpdatePassWord"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="15dp"
        android:background="@drawable/bg_button_confirm"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/action_confirm"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textStyle="bold" />


</LinearLayout>
